paas/k8s/opa/cosign-signed-images-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireCosignSignature
metadata:
  name: require-cosign-signature
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    annotationKey: "cosign.sig"
